moc_h = ['jacktrip/DataProtocol.h',
	'jacktrip/JackTrip.h',
	'jacktrip/JackTripWorker.h',
	'jacktrip/PacketHeader.h',
	'jacktrip/UdpDataProtocol.h',
	'jacktrip/UdpHubListener.h']
moc_files = qt5.preprocess(moc_headers : moc_h)

install_headers(['jacktrip/JackTrip.h',
	'jacktrip/UdpHubListener.h',
	'jacktrip/DataProtocol.h',
	'jacktrip/ProcessPlugin.h',
	'jacktrip/AudioInterface.h',
	'jacktrip/JackAudioInterface.h',
	'jacktrip/PacketHeader.h',
	'jacktrip/jacktrip_globals.h',
	'jacktrip/RingBuffer.h',
	'jacktrip/LoopBack.h'],
	subdir: 'jacktrip')
