jacktrip_sources = ['DataProtocol.cpp',
	'JackTrip.cpp',
	'jacktrip_globals.cpp',
	'JackTripWorker.cpp',
	'PacketHeader.cpp',
	'ProcessPlugin.cpp',
	'RingBuffer.cpp',
	'UdpDataProtocol.cpp',
	'UdpHubListener.cpp',
	'AudioInterface.cpp',
	'JackAudioInterface.cpp',
	'LoopBack.cpp',
	'JMess.cpp']

libjacktrip = shared_library('libjacktrip',
                        jacktrip_sources,
                        moc_files,
                        include_directories : inc,
                        dependencies : dependencies,
                        cpp_args: defines,
                        install : true)
